test/assets/invalid/application/swap-first-and-last.hs
a :: Int
a = b 'a' 1 [3]

b :: [Int] -> Int -> Char -> Int
b _ _ _ = 1